; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/xargs/extr_xargs.c_pids_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/xargs/extr_xargs.c_pids_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@maxprocs = common dso_local global i32 0, align 4
@childpids = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [14 x i8] c"malloc failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pids_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pids_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @maxprocs, align 4
  %3 = sext i32 %2 to i64
  %4 = mul i64 %3, 4
  %5 = trunc i64 %4 to i32
  %6 = call i32* @malloc(i32 %5)
  store i32* %6, i32** @childpids, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 @errx(i32 1, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %0
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %18, %10
  %12 = load i32, i32* %1, align 4
  %13 = load i32, i32* @maxprocs, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %11
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @clearslot(i32 %16)
  br label %18

18:                                               ; preds = %15
  %19 = load i32, i32* %1, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %11

21:                                               ; preds = %11
  ret void
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @errx(i32, i8*) #1

declare dso_local i32 @clearslot(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
